--- a/Assets/Resources/Localizations/locale-ja_JP.xml
+++ b/Assets/Resources/Localizations/locale-ja_JP.xml
@@ -162,5 +162,8 @@
         <Item id="LCPull2">Click again to move it back.</Item>
         <!-- Path switch -->
         <Item id="PathSwitch">Switched to {0}</Item>
+        <!-- Prius -->
+        <Item id="PriHealthChange1">Health of organ has changed,</Item>
+        <Item id="PriHealthChange2">Click on panel to learn more.</Item>
     </Instructions>
 </Localization>
