Healthy comparison model

--- a/Assets/Resources/Localizations/locale-en_US.xml
+++ b/Assets/Resources/Localizations/locale-en_US.xml
@@ -12,7 +12,6 @@
         <Item id="PathYellowVerbose">Minimal Change</Item>
         <Item id="PathGreenVerbose">Optimal Change</Item>
 
-        <Item id="StatusCharacter">Character</Item> <!-- Used in Prius comparison -->
         <Item id="StatusGood">Good</Item>
         <Item id="StatusIntermediate">Intermediate</Item>
         <Item id="StatusBad">Bad</Item>
@@ -75,6 +74,8 @@
 
         <!-- Prius -->
         <Item id="PriusWelcome">Please select a path to continue.</Item>
+        <Item id="PriusComparison">This is the healthy organ for comparison.</Item>
+
         <Item id="PriHeartGeneral">Heart health is related to blood pressure and LDL.</Item>
         <Item id="PriHeartGoodConcise">Heart is normal.</Item>
         <Item id="PriHeartGoodVerbose">Low blood pressure and cholesterol levels mean a healthy circulatory system.</Item>
@@ -118,7 +119,6 @@
         <Item id="BodyFat">Body Fat:</Item>
         <Item id="DietCalorie">Calories:</Item>
 
-        <!-- TODO: This might go to the archetype health data files. -->
         <Item id="P1Name">Carl</Item>
         <Item id="P1Occupation">Athlete</Item>
         <Item id="P2Name">David</Item>
