--- a/Assets/Resources/Localizations/locale-ja_JP.xml
+++ b/Assets/Resources/Localizations/locale-ja_JP.xml
@@ -12,7 +12,6 @@
         <Item id="PathYellowVerbose">最小限</Item>
         <Item id="PathGreenVerbose">変更なし</Item>
 
-        <Item id="StatusCharacter">キャラクター</Item> <!-- Used in Prius comparison -->
         <Item id="StatusGood">良い</Item>
         <Item id="StatusIntermediate">まあまあ</Item>
         <Item id="StatusBad">悪い</Item>
@@ -74,7 +73,9 @@
         <Item id="LCYear">{0}年</Item>
 
         <!-- Prius -->
-        <Item id="PriusWelcome">Please select a path to continue.</Item>
+        <Item id="PriusWelcome">パースを選びなさい。</Item>
+        <Item id="PriusComparison">これは比較するための健康的な器官です。</Item>
+
         <Item id="PriHeartGeneral">Heart health is related to blood pressure and LDL.</Item>
         <Item id="PriHeartGoodConcise">Heart is normal.</Item>
         <Item id="PriHeartGoodVerbose">Low blood pressure and cholesterol levels mean a healthy circulatory system.</Item>
@@ -113,15 +114,14 @@
         <Item id="Blood">血液</Item>
         <Item id="Sleep">睡眠</Item>
         <Item id="SleepHour">時間：</Item>
-        <Item id="BloodPressure">Blood Pressure (mmHg):</Item>
+        <Item id="BloodPressure">血圧 (mmHg):</Item>
         <Item id="BodyBMI">BMI:</Item>
-        <Item id="BodyFat">Body Fat:</Item>
+        <Item id="BodyFat">体脂肪率：</Item>
         <Item id="DietCalorie">カロリー：</Item>
 
-        <!-- TODO: This might go to the archetype health data files. -->
         <Item id="P1Name">カール</Item>
         <Item id="P1Occupation">アスリート</Item>
-        <Item id="P2Name">デービード</Item>
+        <Item id="P2Name">デービッド</Item>
         <Item id="P2Occupation">運転手</Item>
         <Item id="P3Name">エリック</Item>
         <Item id="P3Occupation">プログラマー</Item>
