Game start menu and pause menu

--- a/Assets/Resources/Localizations/locale-en_US.xml
+++ b/Assets/Resources/Localizations/locale-en_US.xml
@@ -2,8 +2,10 @@
 <Localization>
     <!-- Info commonly used in the app. -->
     <General>
-        <Item id="Lang-en_US">En</Item>
-        <Item id="Lang-ja_JP">日</Item>
+        <Item id="Lang-en_US">English</Item>
+        <Item id="Lang-ja_JP">日本語</Item>
+        <Item id="LangChoose">Please select your language.</Item>
+        <Item id="LangTip">You can also change your language in Settings later.</Item>
 
         <Item id="PathRedConcise">No Change</Item>
         <Item id="PathYellowConcise">Minimal</Item>
@@ -39,6 +41,11 @@
         <Item id="LCHide">Hide</Item>
         <!-- Below are buttons specific to Activity. -->
         <Item id="ActCurrent">Current: {0}</Item>
+
+        <!-- Below are buttons for pause menu. -->
+        <Item id="Menu">Menu</Item>
+        <Item id="LanguageChoose">Choose Language</Item>
+        <Item id="Exit">Exit</Item>
     </Buttons>
 
     <!-- Legneds are text displayed on world position canvases. -->
