--- a/Assets/Resources/Localizations/locale-ja_JP.xml
+++ b/Assets/Resources/Localizations/locale-ja_JP.xml
@@ -2,8 +2,10 @@
 <Localization>
     <!-- Info commonly used in the app. -->
     <General>
-        <Item id="Lang-en_US">En</Item>
-        <Item id="Lang-ja_JP">日</Item>
+        <Item id="Lang-en_US">English</Item>
+        <Item id="Lang-ja_JP">日本語</Item>
+        <Item id="LangChoose">言語を選びなさい。</Item>
+        <Item id="LangTip">後で言語も変更できます。</Item>
 
         <Item id="PathRedConcise">変更なし</Item>
         <Item id="PathYellowConcise">最小限</Item>
@@ -39,6 +41,11 @@
         <Item id="LCHide">隠す</Item>
         <!-- Below are buttons specific to Activity. -->
         <Item id="ActCurrent">今：{0}</Item>
+
+        <!-- Below are buttons for pause menu. -->
+        <Item id="Menu">メニュー</Item>
+        <Item id="LanguageChoose">言語選択</Item>
+        <Item id="Exit">エクシ</Item>
     </Buttons>
 
     <!-- Legneds are text displayed on world position canvases. -->
