Blank tutorial menu, no integration

--- a/Assets/Resources/Localizations/locale-en_US.xml
+++ b/Assets/Resources/Localizations/locale-en_US.xml
@@ -46,6 +46,9 @@
         <Item id="Menu">Menu</Item>
         <Item id="LanguageChoose">Choose Language</Item>
         <Item id="Exit">Exit</Item>
+        <Item id="TutorialNext">Next</Item>
+        <Item id="TutorialSkip">Skip</Item>
+        <Item id="TutorialSkipAll">Skip All</Item>
     </Buttons>
 
     <!-- Legneds are text displayed on world position canvases. -->
