--- a/Assets/Resources/Localizations/locale-ja_JP.xml
+++ b/Assets/Resources/Localizations/locale-ja_JP.xml
@@ -46,6 +46,9 @@
         <Item id="Menu">メニュー</Item>
         <Item id="LanguageChoose">言語選択</Item>
         <Item id="Exit">エクシ</Item>
+        <Item id="TutorialNext">次</Item>
+        <Item id="TutorialSkip">スキップ</Item>
+        <Item id="TutorialSkipAll">全てスキップ</Item>
     </Buttons>
 
     <!-- Legneds are text displayed on world position canvases. -->
