Labels for companion and vessel, partial fix for vessel particles

--- a/Assets/Resources/Localizations/locale-en_US.xml
+++ b/Assets/Resources/Localizations/locale-en_US.xml
@@ -82,6 +82,10 @@
         <Item id="LCPresent">Present</Item>
         <Item id="LCYear">{0} Years</Item>
 
+        <!-- Activity -->
+        <Item id="ActMaleCompanion">This is Barley, a close friend who is in a good shape.</Item>
+        <Item id="ActFemaleCompanion">This is Diana, a close friend who is in a good shape.</Item>
+
         <!-- Prius -->
         <Item id="PriusWelcome">Please select a path to continue.</Item>
         <Item id="PriusComparison">This is the healthy organ for comparison.</Item>
@@ -109,6 +113,8 @@
         <Item id="PriKidneyIntermediateVerbose">Rising blood pressure and glucose starts to impair kidney function to filter toxins.</Item>
         <Item id="PriKidneyBadConcise">Persistent high blood pressure and high glucosee levels have led to kidney damage and the kidney stops filtering toxins, causing diabetes.</Item>
         <Item id="PriKidneyBadVerbose">Kidney is experiencing diabetes.</Item>
+
+        <Item id="PriHeartVessel">This is a blood vessel with red cells flowing through. As the person's health gets worse, the vessel might get clogged, preventing cells to flow.</Item>
     </Legends>
 
     <!-- Archetype data -->
