--- a/Assets/Resources/Localizations/locale-ja_JP.xml
+++ b/Assets/Resources/Localizations/locale-ja_JP.xml
@@ -78,9 +78,13 @@
         <Item id="LCBMI">BMI</Item>
         <Item id="LCAIC">HbA1C</Item> <!-- (%) -->
         <Item id="LCLDL">LDL</Item> <!-- (mg/dL) -->
-        <Item id="LCBP">Blood Pressure</Item>
+        <Item id="LCBP">血圧</Item>
         <Item id="LCPresent">今</Item>
         <Item id="LCYear">{0}年</Item>
+
+        <!-- Activity -->
+        <Item id="ActMaleCompanion">これはバーニーです。健康な友達です。</Item>
+        <Item id="ActFemaleCompanion">これはダイアナです。健康な友達です。</Item>
 
         <!-- Prius -->
         <Item id="PriusWelcome">パースを選びなさい。</Item>
@@ -109,6 +113,8 @@
         <Item id="PriKidneyIntermediateVerbose">Rising blood pressure and glucose starts to impair kidney function to filter toxins.</Item>
         <Item id="PriKidneyBadConcise">Persistent high blood pressure and high glucosee levels have led to kidney damage and the kidney stops filtering toxins, causing diabetes.</Item>
         <Item id="PriKidneyBadVerbose">Kidney is experiencing diabetes.</Item>
+        
+        <Item id="PriHeartVessel">This is a blood vessel with red cells flowing through. As the person's health gets worse, the vessel might get clogged, preventing cells to flow.</Item>
     </Legends>
 
     <!-- Archetype data -->
