--- a/Assets/Resources/Localizations/locale-en_US.xml
+++ b/Assets/Resources/Localizations/locale-en_US.xml
@@ -161,25 +161,18 @@
         <Item id="ArchetypeSelect">Select archetype to start&#10;Press "Reset" to relocate plane</Item>
         <Item id="ArchetypeRead">Reading archetype info...</Item>
         <Item id="ArchetypePredict">Please press "Predict" Button</Item>
-        <Item id="ArchetypeInfo">Click "Info" for information on life choices</Item>
-        <Item id="ArchetypeLineChart">Click "Line Chart" to create Ribbon Charts.</Item>
+        <Item id="ArchetypeFunc">Click "Info" for information on life choices.&#10;Click "Line Chart" to create Ribbon Charts.</Item>
         <!-- Line chart -->
         <Item id="LCAlter">Use the left buttons to alter ribbon chart.</Item>
-        <Item id="LCToggleRibbon1">You have toggled the ribbon charts,</Item>
-        <Item id="LCToggleRibbon2">This would allow you to focus on individual years.</Item>
+        <Item id="LCToggleRibbon">You have toggled the ribbon charts. This would allow you to focus on individual years.</Item>
         <Item id="LCBackground">You just hid the light blue panel background.</Item>
-        <Item id="LCDim1">You just dimmed the bars,</Item>
-        <Item id="LCDim2">Click again to light them up.</Item>
-        <Item id="LCSet1">You just hid the bars,</Item>
-        <Item id="LCSet2">Click again to show them.</Item>
-        <Item id="LCPullError1">You clicked too fast,</Item>
-        <Item id="LCPullError2">Wait a second and try again.</Item>
-        <Item id="LCPull1">"You just pull the section to the right,</Item>
-        <Item id="LCPull2">Click again to move it back.</Item>
+        <Item id="LCDim">You just dimmed the bars. Click again to light them up.</Item>
+        <Item id="LCSet">You just hid the bars. Click again to show them.</Item>
+        <Item id="LCPullError">You clicked too fast. Wait a second and try again.</Item>
+        <Item id="LCPull">"You just pull the section to the right. Click again to move it back.</Item>
         <!-- Path switch -->
         <Item id="PathSwitch">Switched to {0}</Item>
         <!-- Prius -->
-        <Item id="PriHealthChange1">Health of organ has changed,</Item>
-        <Item id="PriHealthChange2">Click on panel to learn more.</Item>
+        <Item id="PriHealthChange">Health of organ has changed, Click on panel to learn more.</Item>
     </Instructions>
 </Localization>
