Added tutorial option in Settings menu

--- a/Assets/Resources/Localizations/locale-en_US.xml
+++ b/Assets/Resources/Localizations/locale-en_US.xml
@@ -33,6 +33,7 @@
         <Item id="LineChart">Line Chart</Item>
         <Item id="Activity">Activity</Item>
         <Item id="Prius">Internals</Item>
+        <Item id="ShowTutorial">Show Tutorial</Item>
         <!-- Below are buttons specific to the line chart. -->
         <Item id="LCPull">Pull Section</Item>
         <Item id="LCRibbon">Ribbon Graph</Item>
