Added confirmation of language choice in welcome menu

--- a/Assets/Resources/Localizations/locale-en_US.xml
+++ b/Assets/Resources/Localizations/locale-en_US.xml
@@ -34,6 +34,7 @@
         <Item id="Activity">Activity</Item>
         <Item id="Prius">Internals</Item>
         <Item id="ShowTutorial">Show Tutorial</Item>
+        <Item id="Confirm">Confirm</Item>
         <!-- Below are buttons specific to the line chart. -->
         <Item id="LCPull">Pull Section</Item>
         <Item id="LCRibbon">Ribbon Graph</Item>
