--- a/Assets/Resources/Localizations/locale-ja_JP.xml
+++ b/Assets/Resources/Localizations/locale-ja_JP.xml
@@ -34,6 +34,7 @@
         <Item id="Activity">活動</Item>
         <Item id="Prius">内蔵</Item>
         <Item id="ShowTutorial">チュートリアル</Item>
+        <Item id="Confirm">確認</Item>
         <!-- Below are buttons specific to the line chart. -->
         <Item id="LCPull">セクションを引く</Item>
         <Item id="LCRibbon">リボーンチャート</Item>
