Added confirmation of Skip all in tutorial menu

--- a/Assets/Resources/Localizations/locale-ja_JP.xml
+++ b/Assets/Resources/Localizations/locale-ja_JP.xml
@@ -34,6 +34,7 @@
         <Item id="Activity">活動</Item>
         <Item id="Prius">内蔵</Item>
         <Item id="ShowTutorial">チュートリアル</Item>
+        <Item id="Cancel">キャンセル</Item>
         <Item id="Confirm">確認</Item>
         <!-- Below are buttons specific to the line chart. -->
         <Item id="LCPull">セクションを引く</Item>
@@ -164,6 +165,8 @@
         <Item id="ArchetypeRead">Reading archetype info...</Item>
         <Item id="ArchetypePredict">「予測」バトンを押しなさい。</Item>
         <Item id="ArchetypeFunc">Click "Info" for information on life choices.&#10;Click "Line Chart" to create Ribbon Charts.</Item>
+
+        <Item id="TutorialSkipAll">Are you sure? You can restore tutorials later in Settings.</Item>
         <!-- Line chart -->
         <Item id="LCAlter">Use the left buttons to alter ribbon chart.</Item>
         <Item id="LCToggleRibbon">You have toggled the ribbon charts. This would allow you to focus on individual years.</Item>
