--- a/Assets/Resources/Localizations/locale-en_US.xml
+++ b/Assets/Resources/Localizations/locale-en_US.xml
@@ -34,6 +34,7 @@
         <Item id="Activity">Activity</Item>
         <Item id="Prius">Internals</Item>
         <Item id="ShowTutorial">Show Tutorial</Item>
+        <Item id="Cancel">Cancel</Item>
         <Item id="Confirm">Confirm</Item>
         <!-- Below are buttons specific to the line chart. -->
         <Item id="LCPull">Pull Section</Item>
@@ -164,6 +165,8 @@
         <Item id="ArchetypeRead">Reading archetype info...</Item>
         <Item id="ArchetypePredict">Please press "Predict" Button</Item>
         <Item id="ArchetypeFunc">Click "Info" for information on life choices.&#10;Click "Line Chart" to create Ribbon Charts.</Item>
+
+         <Item id="TutorialSkipAll">Are you sure? You can restore tutorials later in Settings.</Item>
         <!-- Line chart -->
         <Item id="LCAlter">Use the left buttons to alter ribbon chart.</Item>
         <Item id="LCToggleRibbon">You have toggled the ribbon charts. This would allow you to focus on individual years.</Item>
