--- a/Assets/Resources/Localizations/locale-ja_JP.xml
+++ b/Assets/Resources/Localizations/locale-ja_JP.xml
@@ -75,6 +75,16 @@
         <Item id="HeaderText">{0}年 ({1}歳, {2})</Item> <!-- {2} is the path -->
         <Item id="SliderText">{0}年後</Item>
 
+        <!-- Tooltip -->
+        <Item id="BtnActivity">Switches to the Activity visualization.</Item>
+        <Item id="BtnLineChart">Switches to the Line Chart visualization.</Item>
+        <Item id="BtnPrius">Switches to the Prius visualization.</Item>
+        <Item id="BtnInfo">Shows the path information.</Item>
+        <Item id="BtnReset">Reselect an archetype, or rechoose the stage.</Item>
+        <Item id="BtnPathRed">Switches to "No change" path.</Item>
+        <Item id="BtnPathYellow">Switches to "Minimal" path.</Item>
+        <Item id="BtnPathGreen">Switches to "Optimal" path.</Item>
+
         <!-- Line chart -->
         <Item id="LCOverall">総体</Item>
         <Item id="LCBodyFat">Body Fat</Item> <!-- (%) -->
