--- a/Assets/Resources/Localizations/locale-en_US.xml
+++ b/Assets/Resources/Localizations/locale-en_US.xml
@@ -194,7 +194,7 @@
     <Tutorials>
     <Item id="CursorTitle">Interaction System</Item>
     <Item id="CursorText">This app uses cursor interaction. There is a pointer in the center of the screen. Move your device to make it hover on the object you wish to interact with. The cursor will turn yellow and become larger when it detects an interactable object. Then, tap anywhere on the screen to interact.</Item>
-    <Item id="LCIntroTitle1">Line Chart Visualization</Item>
+    <Item id="LCIntroTitle">Line Chart Visualization</Item>
     <Item id="LCIntroText1">To the right of the figure are the data given by Bodylogical. There are 6 biometrics: body fat, BMI, HbA1C, LDL, blood pressure, and an overall score. The bars are separated into three sections, indicating health status. The indicators will be connected by ribbons across years to give you a clearer view of health development.</Item>
     <Item id="LCIntroText2">On the left of the control panel there will be 5 control buttons. Try each of them to see what they do!</Item>
     <Item id="ActIntroTitle">Activity Visualization</Item>
