Integrated dynamic tooltips

--- a/Assets/Resources/Localizations/locale-en_US.xml
+++ b/Assets/Resources/Localizations/locale-en_US.xml
@@ -84,7 +84,15 @@
         <Item id="BtnPathRed">Switches to "No change" path.</Item>
         <Item id="BtnPathYellow">Switches to "Minimal" path.</Item>
         <Item id="BtnPathGreen">Switches to "Optimal" path.</Item>
-
+        <Item id="BtnPlay">Starts the year progression.</Item>
+        <Item id="BtnStop">Stops the year progression.</Item>
+        <Item id="BtnPullRight">Pulls one section to the right of the chart for better view.</Item>
+        <Item id="BtnRibbonGraph">Toggles the ribbons across the charts.</Item>
+        <Item id="BtnTransparent">Adjusts the transparency of the chart background.</Item>
+        <Item id="BtnDim">Adjusts the brightness of the range bars.</Item>
+        <Item id="BtnHide">Toggles the visibilitiy of the range bars.</Item>
+        <Item id="BtnSwitchAct">Switches among different activities.</Item>
+        
         <!-- Line chart -->
         <Item id="LCOverall">Overall</Item>
         <Item id="LCBodyFat">Body Fat</Item> <!-- (%) -->
