--- a/Assets/Resources/Localizations/locale-en_US.xml
+++ b/Assets/Resources/Localizations/locale-en_US.xml
@@ -37,11 +37,10 @@
         <Item id="Cancel">Cancel</Item>
         <Item id="Confirm">Confirm</Item>
         <!-- Below are buttons specific to the line chart. -->
-        <Item id="LCPull">Pull Section</Item>
-        <Item id="LCRibbon">Ribbon Graph</Item>
+        <Item id="LCRibbon">Show Ribbons</Item>
         <Item id="LCTransparent">Transparent</Item>
         <Item id="LCDim">Dim</Item>
-        <Item id="LCHide">Hide</Item>
+        <Item id="LCHide">Hide Bars</Item>
         <!-- Below are buttons specific to Activity. -->
         <Item id="ActCurrent">Current: {0}</Item>
 
@@ -52,10 +51,21 @@
         <Item id="TutorialNext">Next</Item>
         <Item id="TutorialSkip">Skip</Item>
         <Item id="TutorialSkipAll">Skip All</Item>
+
+        <Item id="Switcher">Switch</Item>
+
+        <!-- Toggles -->
+        <Item id="ToggleOn">On</Item>
+        <Item id="ToggleOff">Off</Item>
     </Buttons>
 
     <!-- Legneds are text displayed on world position canvases. -->
     <Legends>
+        <!-- Panels -->
+        <Item id="TimeControlHeader">Time Controls</Item>
+        <Item id="RibbonChartHeader">Line Chart Controls</Item>
+        <Item id="MainHeader">Controls</Item>
+
         <!-- Info -->
         <Item id="InfoOptimalTitle">Recommended Activities</Item>
         <Item id="InfoMinimalTitle">Baseline Activities for Health</Item>
@@ -92,7 +102,7 @@
         <Item id="BtnDim">Adjusts the brightness of the range bars.</Item>
         <Item id="BtnHide">Toggles the visibilitiy of the range bars.</Item>
         <Item id="BtnSwitchAct">Switches among different activities.</Item>
-        
+
         <!-- Line chart -->
         <Item id="LCOverall">Overall</Item>
         <Item id="LCBodyFat">Body Fat</Item> <!-- (%) -->
