--- a/Assets/Resources/Localizations/locale-ja_JP.xml
+++ b/Assets/Resources/Localizations/locale-ja_JP.xml
@@ -37,11 +37,10 @@
         <Item id="Cancel">キャンセル</Item>
         <Item id="Confirm">確認</Item>
         <!-- Below are buttons specific to the line chart. -->
-        <Item id="LCPull">セクションを引く</Item>
         <Item id="LCRibbon">リボーンチャート</Item>
         <Item id="LCTransparent">透明化</Item>
         <Item id="LCDim">暗くなる</Item>
-        <Item id="LCHide">隠す</Item>
+        <Item id="LCHide">バーを隠す</Item>
         <!-- Below are buttons specific to Activity. -->
         <Item id="ActCurrent">今：{0}</Item>
 
@@ -52,10 +51,21 @@
         <Item id="TutorialNext">次</Item>
         <Item id="TutorialSkip">スキップ</Item>
         <Item id="TutorialSkipAll">全てスキップ</Item>
+
+        <Item id="Switcher">変更</Item>
+        
+        <!-- Toggles -->
+        <Item id="ToggleOn">On</Item>
+        <Item id="ToggleOff">Off</Item>
     </Buttons>
 
     <!-- Legneds are text displayed on world position canvases. -->
     <Legends>
+        <!-- Panels -->
+        <Item id="TimeControlHeader">Time Controls</Item>
+        <Item id="RibbonChartHeader">Line Chart Controls</Item>
+        <Item id="MainHeader">Controls</Item>
+
         <!-- Info -->
         <Item id="InfoOptimalTitle">Recommended Activities</Item>
         <Item id="InfoMinimalTitle">Baseline Activities for Health</Item>
