Completed all UI elements

--- a/Assets/Resources/Localizations/locale-ja_JP.xml
+++ b/Assets/Resources/Localizations/locale-ja_JP.xml
@@ -21,6 +21,7 @@
         <Item id="ActJog">ジョギング</Item>
         <Item id="ActSoc">サカ</Item>
 
+        <Item id="PriOverall">まとめ</Item>
         <Item id="PriHeart">心臓</Item>
         <Item id="PriLiver">肝臓</Item>
         <Item id="PriKidney">腎臓</Item>
@@ -90,10 +91,6 @@
         <Item id="BtnLineChart">Switches to the Line Chart visualization.</Item>
         <Item id="BtnPrius">Switches to the Prius visualization.</Item>
         <Item id="BtnInfo">Shows the path information.</Item>
-        <Item id="BtnReset">Reselect an archetype, or rechoose the stage.</Item>
-        <Item id="BtnPathRed">Switches to "No change" path.</Item>
-        <Item id="BtnPathYellow">Switches to "Minimal" path.</Item>
-        <Item id="BtnPathGreen">Switches to "Optimal" path.</Item>
         <Item id="BtnPlay">Starts the year progression.</Item>
         <Item id="BtnStop">Stops the year progression.</Item>
         <Item id="BtnPullRight">Pulls one section to the right of the chart for better view.</Item>
@@ -101,7 +98,9 @@
         <Item id="BtnTransparent">Adjusts the transparency of the chart background.</Item>
         <Item id="BtnDim">Adjusts the brightness of the range bars.</Item>
         <Item id="BtnHide">Toggles the visibilitiy of the range bars.</Item>
+        <Item id="BtnSwitchPath">Switches among different paths.</Item>
         <Item id="BtnSwitchAct">Switches among different activities.</Item>
+        <Item id="BtnSwitchPrius">Switches among different organs.</Item>
 
         <!-- Line chart -->
         <Item id="LCOverall">総体</Item>
@@ -191,7 +190,7 @@
         
         <Item id="ArchetypeSelect">Select archetype to start&#10;Press "Reset" to relocate plane</Item>
         <Item id="ArchetypeRead">Reading archetype info...</Item>
-        <Item id="ArchetypePredict">「予測」バトンを押しなさい。</Item>
+        <Item id="ArchetypePredict">「？」バトンを押しなさい。</Item>
         <Item id="ArchetypeFunc">Click "Info" for information on life choices.&#10;Click "Line Chart" to create Ribbon Charts.</Item>
 
         <Item id="TutorialSkipAll">Are you sure? You can restore tutorials later in Settings.</Item>
