--- a/Assets/Resources/Localizations/locale-en_US.xml
+++ b/Assets/Resources/Localizations/locale-en_US.xml
@@ -201,7 +201,7 @@
         <Item id="LCDim">You just dimmed the bars. Click again to light them up.</Item>
         <Item id="LCSet">You just hid the bars. Click again to show them.</Item>
         <Item id="LCPullError">You clicked too fast. Wait a second and try again.</Item>
-        <Item id="LCPull">"You just pull the section to the right. Click again to move it back.</Item>
+        <Item id="LCPull">You just pull the section to the right. Click again to move it back.</Item>
         <!-- Path switch -->
         <Item id="PathSwitch">Switched to {0}</Item>
         <!-- Prius -->
