Changed to actual inputs

--- a/Assets/Resources/Localizations/locale-en_US.xml
+++ b/Assets/Resources/Localizations/locale-en_US.xml
@@ -155,14 +155,16 @@
 
         <!-- Info here subject to change. -->
         <Item id="CurrentYear">Current Year: {0}</Item>
-        <Item id="BodyStats">Body Stats</Item>
+        <Item id="Exercise">Exercise</Item>
         <Item id="Diet">Diet</Item>
-        <Item id="Blood">Blood</Item>
+        <Item id="Adherence">Adherence</Item>
         <Item id="Sleep">Sleep</Item>
         <Item id="SleepHour">Time (Hours):</Item>
-        <Item id="BloodPressure">Blood Pressure (mmHg):</Item>
-        <Item id="BodyBMI">BMI:</Item>
-        <Item id="BodyFat">Body Fat:</Item>
+        <Item id="Prescription">Prescription adherence:</Item>
+        <Item id="PresGood">Good</Item>
+        <Item id="PresMedium">Medium</Item>
+        <Item id="PresBad">Bad</Item>
+        <Item id="ExercisePerWeek">Exercise Per Week (Hours):</Item>
         <Item id="DietCalorie">Calories:</Item>
 
         <Item id="P1Name">Carl</Item>
