--- a/Assets/Resources/Localizations/locale-ja_JP.xml
+++ b/Assets/Resources/Localizations/locale-ja_JP.xml
@@ -155,14 +155,16 @@
 
         <!-- Info here subject to change. -->
         <Item id="CurrentYear">当前：{0}</Item>
-        <Item id="BodyStats">身体状況</Item>
+        <Item id="Exercise">運動</Item>
         <Item id="Diet">飲食</Item>
-        <Item id="Blood">血液</Item>
+        <Item id="Adherence">Adherence</Item>
         <Item id="Sleep">睡眠</Item>
         <Item id="SleepHour">時間：</Item>
-        <Item id="BloodPressure">血圧 (mmHg):</Item>
-        <Item id="BodyBMI">BMI:</Item>
-        <Item id="BodyFat">体脂肪率：</Item>
+        <Item id="Prescription">Prescription adherence:</Item>
+        <Item id="PresGood">良い</Item>
+        <Item id="PresMedium">まあまあ</Item>
+        <Item id="PresBad">悪い</Item>
+        <Item id="ExercisePerWeek">毎週運動時間数：</Item>
         <Item id="DietCalorie">カロリー：</Item>
 
         <Item id="P1Name">カール</Item>
